--- a/ressources/styles/components/filter.scss
+++ b/ressources/styles/components/filter.scss
@@ -9,7 +9,7 @@
     font-weight: 500;
     padding: 3px 5px;
     text-decoration: none;
-    margin: 5 5px;
+    margin: 5px 5px;
 
     &:hover{
         background-color: color.$primary-color;
