--- a/ressources/styles/layout/main-header.scss
+++ b/ressources/styles/layout/main-header.scss
@@ -8,7 +8,10 @@
     &__logo {
         max-height: 80px;
         align-self: flex-start;
-        
+    }
+    &__nav {
+        display: flex;
+        flex-wrap: wrap;
     }
 
 }
