--- a/ressources/styles/main.scss
+++ b/ressources/styles/main.scss
@@ -3,3 +3,5 @@
 @use "./base/reset.scss";
 @use "./layout/main-header.scss";
 @use "./components/anchor.scss";
+@use "./pages/homepage.scss";
+@use "./components/card.scss";
