--- a/ressources/styles/main.css
+++ b/ressources/styles/main.css
@@ -21,6 +21,14 @@
   font-family: "Roboto", sans-serif;
 }
 
+h2 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
 .main-header {
   display: flex;
   align-items: center;
@@ -38,6 +46,50 @@
 .anchor {
   position: fixed;
   display: none;
+}
+
+.homepage__title {
+  max-width: 24%;
+  margin: 0;
+}
+
+.card {
+  width: 350px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 15px;
+}
+.card__image {
+  border-radius: 50%;
+  height: 250px;
+  width: 250px;
+  overflow: hidden;
+  object-fit: cover;
+  margin: 15px auto;
+  cursor: pointer;
+}
+.card__title {
+  color: #d3573c;
+  font-size: 2rem;
+  text-align: center;
+  cursor: pointer;
+}
+.card__location {
+  color: #901c1c;
+  text-align: center;
+}
+.card__bio {
+  text-align: center;
+}
+.card__price {
+  color: #525252;
+  text-align: center;
+}
+.card__tags {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /*# sourceMappingURL=main.css.map */
