--- a/ressources/styles/components/filter.scss
+++ b/ressources/styles/components/filter.scss
@@ -11,6 +11,10 @@
     text-decoration: none;
     margin: 5px 5px;
 
+    @media only screen and (max-width: 600px) {
+        font-size: 0.75rem;
+    }
+
     &:hover{
         background-color: color.$primary-color;
         color: color.$text-background-color;
