--- a/ressources/styles/layout/main-header.scss
+++ b/ressources/styles/layout/main-header.scss
@@ -5,9 +5,17 @@
     align-items: center;
     width: 75%;
 
+    @media only screen and (max-width: 600px) {
+        flex-wrap: wrap;
+        width: 100%;
+    }
     &__logo {
         max-height: 80px;
         align-self: flex-start;
+
+        @media only screen and (max-width: 600px) {
+            max-height: 40px;
+        }
     }
     &__nav {
         display: flex;
