--- a/ressources/styles/pages/homepage.scss
+++ b/ressources/styles/pages/homepage.scss
@@ -1,8 +1,21 @@
+@use "../utils/color.scss";
+
 .homepage {    
     
     &__title {
         max-width: 24%;
         margin: 0;
+        position: absolute;
+        top: 25px;
+        right: 25px;
+        color: color.$primary-color;
+        font-weight: 500;
+
+        @media only screen and (max-width: 600px) {
+            font-size: 1rem;
+            top: 20px;
+            max-width: 100%;
+        }
     }
     &__content {
         display: flex;
