--- a/ressources/styles/components/anchor.scss
+++ b/ressources/styles/components/anchor.scss
@@ -1,4 +1,15 @@
+@use "../utils/color.scss";
+
 .anchor {
     position: fixed;
     display: none;
+    color: black;
+    border-radius: 8px;
+    background-color: color.$secondary-color;
+    font-size: 1.3rem;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 8px 16px;
+    top: 20px;
+    left: calc(50% - 110px);
 }
