profile page initial layout

--- a/ressources/styles/base/reset.scss
+++ b/ressources/styles/base/reset.scss
@@ -1,6 +1,17 @@
+h1 {
+    margin: 0;
+}
 h2 {
     margin: 0;
+    
 }
 p {
     margin: 0;
+}
+
+body {
+    padding: 25px;
+    @media only screen and (max-width: 600px) {
+        padding: 5px
+    }
 }
