--- a/ressources/styles/components/anchor.scss
+++ b/ressources/styles/components/anchor.scss
@@ -5,7 +5,7 @@
     display: none;
     color: black;
     border-radius: 8px;
-    background-color: color.$secondary-color;
+    background-color: #DB8876;
     font-size: 1.3rem;
     font-weight: 600;
     text-decoration: none;
