--- a/ressources/styles/main.scss
+++ b/ressources/styles/main.scss
@@ -4,4 +4,8 @@
 @use "./layout/main-header.scss";
 @use "./components/anchor.scss";
 @use "./pages/homepage.scss";
+@use "./pages/gallery.scss";
 @use "./components/card.scss";
+@use "./components/button.scss";
+@use "./components/dropdown.scss";
+@use "./components/sticky.scss";
