--- a/ressources/styles/components/card.scss
+++ b/ressources/styles/components/card.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     margin: 15px;
+    text-align: center;
 
     &__link  {
         text-decoration: none;
@@ -15,27 +16,75 @@
         width: 250px;
         overflow: hidden;
         object-fit: cover;
-        margin: 15px auto;           
+        margin: 15px auto;
+        
+        &--profile {
+            margin-right: 0;
+            @media only screen and (max-width: 600px) {
+                height: 133px;
+                width: 133px;
+            }
+        }
     }
     &__title {
         color: color.$secondary-color;
         font-size: 2rem;
-        text-align: center;
+
+        &--profile {
+            font-size: 4rem;
+            @media only screen and (max-width: 600px) {
+                font-size: 2.25rem;
+            }
+        }
+        
     }
     &__location {
         color: color.$primary-color;
-        text-align: center;
+
+        &--profile {
+            font-size: 1.5rem;
+
+            @media only screen and (max-width: 600px) {
+                font-size: 0.75rem;
+            }
+        }
+        
     }
     &__bio {
-        text-align: center;
+        
     }
     &__price {
         color : color.$text-color;
-        text-align: center;
+        
     }
     &__tags {
         display: flex;
         flex-wrap: wrap;
-    }
 
+        @media only screen and (max-width: 600px) {
+            position: absolute;
+            bottom: -30px;
+        }
+    }
+    &--profile {
+        display: flex;
+        padding: 0 50px;
+        max-height: 300px;
+        position: relative;
+        @media only screen and (max-width: 600px) {
+            padding: 0 10px;
+            margin-bottom: 50px;
+        }
+
+        &__desc {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            font-size: 1.1rem;
+
+            @media only screen and (max-width: 600px) {
+                font-size: 0.75rem;
+            }
+        }
+    }
 }
