--- a/ressources/styles/main.css
+++ b/ressources/styles/main.css
@@ -23,7 +23,11 @@
 }
 
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: "DM Sans", sans-serif;
+}
+
+h1 {
+  margin: 0;
 }
 
 h2 {
@@ -32,6 +36,15 @@ h2 {
 
 p {
   margin: 0;
+}
+
+body {
+  padding: 25px;
+}
+@media only screen and (max-width: 600px) {
+  body {
+    padding: 5px;
+  }
 }
 
 .main-header {
@@ -64,7 +77,7 @@ p {
   display: none;
   color: black;
   border-radius: 8px;
-  background-color: #d3573c;
+  background-color: #DB8876;
   font-size: 1.3rem;
   font-weight: 600;
   text-decoration: none;
@@ -77,8 +90,8 @@ p {
   max-width: 24%;
   margin: 0;
   position: absolute;
-  top: 25px;
-  right: 25px;
+  top: 50px;
+  right: 50px;
   color: #901c1c;
   font-weight: 500;
 }
@@ -95,12 +108,45 @@ p {
   justify-content: space-around;
 }
 
+.gallery {
+  margin: 50px;
+}
+.gallery__item {
+  margin: 15px;
+  margin-top: 100px;
+  max-width: 350px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.gallery__item__image {
+  max-height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+@media only screen and (max-width: 600px) {
+  .gallery__item__image {
+    max-height: 190px;
+  }
+}
+.gallery__item__details {
+  color: #901c1c;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 600px) {
+  .gallery__item__details {
+    font-size: 0.75rem;
+  }
+}
+
 .card {
   width: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 15px;
+  text-align: center;
 }
 .card__link {
   text-decoration: none;
@@ -113,25 +159,128 @@ p {
   object-fit: cover;
   margin: 15px auto;
 }
+.card__image--profile {
+  margin-right: 0;
+}
+@media only screen and (max-width: 600px) {
+  .card__image--profile {
+    height: 133px;
+    width: 133px;
+  }
+}
 .card__title {
   color: #d3573c;
   font-size: 2rem;
-  text-align: center;
+}
+.card__title--profile {
+  font-size: 4rem;
+}
+@media only screen and (max-width: 600px) {
+  .card__title--profile {
+    font-size: 2.25rem;
+  }
 }
 .card__location {
   color: #901c1c;
-  text-align: center;
 }
-.card__bio {
-  text-align: center;
+.card__location--profile {
+  font-size: 1.5rem;
+}
+@media only screen and (max-width: 600px) {
+  .card__location--profile {
+    font-size: 0.75rem;
+  }
 }
 .card__price {
   color: #525252;
-  text-align: center;
 }
 .card__tags {
   display: flex;
   flex-wrap: wrap;
+}
+@media only screen and (max-width: 600px) {
+  .card__tags {
+    position: absolute;
+    bottom: -30px;
+  }
+}
+.card--profile {
+  display: flex;
+  padding: 0 50px;
+  max-height: 300px;
+  position: relative;
+}
+@media only screen and (max-width: 600px) {
+  .card--profile {
+    padding: 0 10px;
+    margin-bottom: 50px;
+  }
+}
+.card--profile__desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-size: 1.1rem;
+}
+@media only screen and (max-width: 600px) {
+  .card--profile__desc {
+    font-size: 0.75rem;
+  }
+}
+
+.button--contact {
+  border-radius: 5px;
+  background-color: #901c1c;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 23px 20px;
+  max-height: 70px;
+  border: none;
+}
+@media only screen and (max-width: 600px) {
+  .button--contact {
+    position: fixed;
+    bottom: 30px;
+    left: calc(50% - 68px);
+    padding: 10px;
+  }
+}
+
+.dropdown {
+  background-color: #901c1c;
+  color: #FFFFFF;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 15px;
+  font-weight: 700;
+  font-size: 1rem;
+  border: none;
+}
+@media only screen and (max-width: 600px) {
+  .dropdown {
+    display: none;
+  }
+}
+
+.sticky {
+  background-color: #DB8876;
+  width: 300px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  float: right;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 1.3rem;
+  font-weight: 700;
+}
+@media only screen and (max-width: 600px) {
+  .sticky {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
