--- a/ressources/styles/main.scss
+++ b/ressources/styles/main.scss
@@ -9,3 +9,4 @@
 @use "./components/button.scss";
 @use "./components/dropdown.scss";
 @use "./components/sticky.scss";
+@use "./components/modal.scss";
