--- a/ressources/styles/main.css
+++ b/ressources/styles/main.css
@@ -109,17 +109,19 @@ body {
 }
 
 .gallery {
-  margin: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .gallery__item {
   margin: 15px;
   margin-top: 100px;
-  max-width: 350px;
+  width: 350px;
   border-radius: 5px;
   overflow: hidden;
 }
 .gallery__item__image {
-  max-height: 300px;
+  height: 300px;
   width: 100%;
   object-fit: cover;
 }
