--- a/ressources/styles/main.scss
+++ b/ressources/styles/main.scss
@@ -10,3 +10,5 @@
 @use "./components/dropdown.scss";
 @use "./components/sticky.scss";
 @use "./components/modal.scss";
+@use "./components/lightbox.scss";
+
