profile js wrapup, mobile style adjustement

--- a/ressources/styles/components/button.scss
+++ b/ressources/styles/components/button.scss
@@ -13,6 +13,7 @@
         padding: 23px 20px;
         max-height: 70px;
         border: none;
+        margin-left: 100px;
 
         @media only screen and (max-width: 600px) {
             position: fixed;
