--- a/ressources/styles/components/card.scss
+++ b/ressources/styles/components/card.scss
@@ -71,15 +71,15 @@
         padding: 0 50px;
         max-height: 300px;
         position: relative;
+        margin-bottom: 50px;
         @media only screen and (max-width: 600px) {
             padding: 0 10px;
-            margin-bottom: 50px;
         }
 
         &__desc {
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
+            justify-content: space-between;
             font-size: 1.1rem;
 
             @media only screen and (max-width: 600px) {
