--- a/ressources/styles/components/lightbox.scss
+++ b/ressources/styles/components/lightbox.scss
@@ -16,6 +16,7 @@
 
     &__container {
         display: flex;
+        height: 100%;
         justify-content: space-around;
         align-items: center;
     }
@@ -23,9 +24,22 @@
         margin: 50px;
     }
     &__content {
+        display: flex;
+        align-content: center;
+        justify-content: center;
         width: 1050px;
         height: 800px;
         overflow: hidden;
+        @media only screen and (max-width: 600px) {
+            width: 290px;
+            height: 250px;
+        }
+        
+    }
+    &__image {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
     }
     &__close {
         position: absolute;
