--- a/ressources/styles/components/modal.scss
+++ b/ressources/styles/components/modal.scss
@@ -9,9 +9,21 @@
     left: calc(50% - 335px);
     display: none; 
     border-radius: 5px; 
+    @media only screen and (max-width: 600px) {
+        overflow: hidden;
+        left: 0;
+        top: 0;
+        padding: 15px;
+        width: 100%;
+        height: 100%;
+    }
 
     &__title {
         font-size: 4rem;
+        font-weight: 400;
+        @media only screen and (max-width: 600px) {
+            font-size: 2rem;
+        }
     }
 
     &__close {
@@ -21,6 +33,11 @@
         top: 15px;
         right: 15px;
         font-size: 5rem;
+        @media only screen and (max-width: 600px) {
+            font-size: 2rem;
+            top: 20px;
+            right: 60px;
+        }
     }
 
     &__form {
@@ -31,15 +48,20 @@
         &__input {
             border-radius: 5px;
             height: 70px;
+            @media only screen and (max-width: 600px) {
+                width: 340px;
+            }
         }
 
         &__label {
             font-size: 2.25rem;
             color: #312E2E;
+            @media only screen and (max-width: 600px) {
+                font-size: 1.5rem;
+            }
         }
 
         &__submit {
-
             width: 170px;
             background-color: color.$primary-color;
             border-radius: 5px;
@@ -48,6 +70,11 @@
             color: white;
             font-size: 1.5rem;
             padding: 15px;
+            @media only screen and (max-width: 600px) {
+                font-size: 1.1rem;
+                align-self: center;
+                padding: 5px 15px
+            }
         }
     }
 }
