--- a/ressources/styles/components/sticky.scss
+++ b/ressources/styles/components/sticky.scss
@@ -18,5 +18,10 @@
     @media only screen and (max-width: 600px) {
         display: none;
     }
-
+    &__likeCount{
+        display: flex;
+        width: 25%;
+        justify-content: space-between;
+        align-content: center;
+    }
 }
