--- a/ressources/styles/pages/gallery.scss
+++ b/ressources/styles/pages/gallery.scss
@@ -8,11 +8,14 @@
 
     &__item {
 
-        margin: 15px;
+        margin: 30px;
         margin-top: 100px;
         width: 350px;
         border-radius: 5px;
         overflow: hidden;
+        @media only screen and (max-width: 600px) {
+            margin-top: 25px;
+        }
 
         &__image {
             height: 300px;
@@ -31,6 +34,14 @@
 
             @media only screen and (max-width: 600px) {
                 font-size: 0.75rem;
+            }
+            &__like {
+                display: flex;
+                width: 60px;
+                justify-content: space-between;
+                @media only screen and (max-width: 600px) {
+                    width: 30px;
+                }
             }
         }
     }
