--- a/ressources/styles/main.css
+++ b/ressources/styles/main.css
@@ -112,6 +112,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin-bottom: 100px;
 }
 .gallery__item {
   margin: 30px;
@@ -214,12 +215,6 @@ body {
 .card__tags {
   display: flex;
   flex-wrap: wrap;
-}
-@media only screen and (max-width: 600px) {
-  .card__tags {
-    position: absolute;
-    bottom: -30px;
-  }
 }
 .card--profile {
   display: flex;
@@ -420,12 +415,16 @@ body {
 .lightbox__button {
   margin: 50px;
 }
+@media only screen and (max-width: 600px) {
+  .lightbox__button {
+    margin: 10px;
+    font-size: 2rem;
+  }
+}
 .lightbox__content {
   display: flex;
   align-content: center;
   justify-content: center;
-  width: 1050px;
-  height: 800px;
   overflow: hidden;
 }
 @media only screen and (max-width: 600px) {
@@ -434,10 +433,13 @@ body {
     height: 250px;
   }
 }
+.lightbox__video {
+  width: 100%;
+}
 .lightbox__image {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: scale-down;
 }
 .lightbox__close {
   position: absolute;
