--- a/ressources/styles/pages/gallery.scss
+++ b/ressources/styles/pages/gallery.scss
@@ -29,6 +29,7 @@
         }
         &__details {
             color: color.$primary-color;
+            padding: 5px;
             font-size: 1.5rem;
             display: flex;
             justify-content: space-between;
@@ -38,10 +39,13 @@
             }
             &__like {
                 display: flex;
-                width: 60px;
-                justify-content: space-between;
+                justify-content: center;
+                align-items: center;
                 @media only screen and (max-width: 600px) {
                     width: 30px;
+                }
+                i {
+                    margin-left: 7px;
                 }
             }
         }
