--- a/ressources/styles/components/button.scss
+++ b/ressources/styles/components/button.scss
@@ -14,6 +14,7 @@
         max-height: 70px;
         border: none;
         margin-left: 100px;
+        cursor: pointer;
 
         @media only screen and (max-width: 600px) {
             position: fixed;
