--- a/ressources/styles/main.css
+++ b/ressources/styles/main.css
@@ -73,8 +73,9 @@ body {
 }
 
 .anchor {
-  position: fixed;
-  display: none;
+  position: absolute;
+  display: block;
+  opacity: 0;
   color: black;
   border-radius: 8px;
   background-color: #DB8876;
@@ -82,7 +83,7 @@ body {
   font-weight: 600;
   text-decoration: none;
   padding: 8px 16px;
-  top: 20px;
+  top: 5px;
   left: calc(50% - 110px);
 }
 
@@ -120,6 +121,7 @@ body {
   width: 350px;
   border-radius: 5px;
   overflow: hidden;
+  cursor: pointer;
 }
 @media only screen and (max-width: 600px) {
   .gallery__item {
@@ -257,6 +259,7 @@ body {
   max-height: 70px;
   border: none;
   margin-left: 100px;
+  cursor: pointer;
 }
 @media only screen and (max-width: 600px) {
   .button--contact {
@@ -334,7 +337,7 @@ body {
   }
 }
 .modal__title {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 400;
 }
 @media only screen and (max-width: 600px) {
@@ -418,6 +421,7 @@ body {
 }
 .lightbox__button {
   margin: 50px;
+  cursor: pointer;
 }
 @media only screen and (max-width: 600px) {
   .lightbox__button {
@@ -449,6 +453,7 @@ body {
   position: absolute;
   top: 30px;
   right: 30px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=main.css.map */
