--- a/ressources/styles/pages/gallery.scss
+++ b/ressources/styles/pages/gallery.scss
@@ -14,6 +14,7 @@
         width: 350px;
         border-radius: 5px;
         overflow: hidden;
+        cursor: pointer;
         @media only screen and (max-width: 600px) {
             margin-top: 25px;
         }
