--- a/ressources/styles/components/lightbox.scss
+++ b/ressources/styles/components/lightbox.scss
@@ -12,11 +12,12 @@
     left: 0px;
     display: flex;
     justify-content: center;
+    align-items: center;
     display: none;
 
     &__container {
         display: flex;
-        height: 100%;
+        height: 100%;       
         justify-content: space-around;
         align-items: center;
     }
@@ -30,23 +31,30 @@
 
     }
     &__content {
+        position: relative;
         display: flex;
         align-content: center;
         justify-content: center;
-        overflow: hidden;
+        overflow: visible;
         @media only screen and (max-width: 600px) {
             width: 290px;
             height: 250px;
         }
         
     }
+    &__title {
+        position: absolute;
+        font-size: 1.5rem;
+        bottom: -1.5rem;
+        left: 0px;
+    }
     &__video {
         width: 100%;
         
     }
     &__image {
-        height: 100%;
-        width: 100%;
+        height: 90vh;
+        width: 1050px;
         object-fit: scale-down;
     }
     &__close {
