--- a/ressources/styles/components/lightbox.scss
+++ b/ressources/styles/components/lightbox.scss
@@ -47,6 +47,9 @@
         font-size: 1.5rem;
         bottom: -1.5rem;
         left: 0px;
+        @media only screen and (max-width: 600px) {
+            bottom: -2rem;
+        }
     }
     &__video {
         width: 100%;
@@ -56,12 +59,20 @@
         height: 90vh;
         width: 1050px;
         object-fit: scale-down;
+        @media only screen and (max-width: 600px) {
+            width: 290px;
+            height: 250px;
+        }
     }
     &__close {
         position: absolute;
         top: 30px;
         right: 30px;
         cursor: pointer;
+        @media only screen and (max-width: 600px) {
+            top: 300px;
+            font-size: 2rem;
+        }
     }
 
 }
