--- a/ressources/styles/pages/gallery.scss
+++ b/ressources/styles/pages/gallery.scss
@@ -7,6 +7,19 @@
     justify-content: space-around;
     margin-bottom: 100px;
 
+    &__lightbox-link {
+        display: block;
+        margin: 0;
+        padding: 0;
+        height: 300px;
+        &:focus {
+            border: 2px solid  color.$primary-color;
+            outline: none;
+        }
+        @media only screen and (max-width: 600px) {
+            max-height: 190px;
+        }
+    }   
     &__item {
 
         margin: 30px;
@@ -18,7 +31,7 @@
         @media only screen and (max-width: 600px) {
             margin-top: 25px;
         }
-
+       
         &__image {
             height: 300px;
             width: 100%;
