--- a/ressources/styles/base/reset.scss
+++ b/ressources/styles/base/reset.scss
@@ -8,7 +8,10 @@ h2 {
 p {
     margin: 0;
 }
-
+a {
+    margin: 0;
+    padding: 0;
+}
 body {
     padding: 25px;
     @media only screen and (max-width: 600px) {
