--- a/ressources/styles/components/button.scss
+++ b/ressources/styles/components/button.scss
@@ -26,5 +26,9 @@
 }
 
 .like-button {
+    border: none;
     cursor: pointer;
+    color: color.$primary-color;
+    background: none;
+    font-size: 1.5rem;
 }
