--- a/ressources/styles/components/modal.scss
+++ b/ressources/styles/components/modal.scss
@@ -28,6 +28,8 @@
 
     &__close {
         cursor: pointer;
+        background: none;
+        border: none;
         color: white;
         position: absolute;
         top: 15px;
