--- a/ressources/styles/main.css
+++ b/ressources/styles/main.css
@@ -371,6 +371,8 @@ body {
 }
 .modal__close {
   cursor: pointer;
+  background: none;
+  border: none;
   color: white;
   position: absolute;
   top: 15px;
