--- a/ressources/styles/components/lightbox.scss
+++ b/ressources/styles/components/lightbox.scss
@@ -24,6 +24,9 @@
     &__button {
         margin: 50px;
         cursor: pointer;
+        background: none;
+        border: none;
+        color: color.$primary-color;
         @media only screen and (max-width: 600px) {
             margin: 10px;
             font-size: 2rem;
@@ -69,6 +72,9 @@
         top: 30px;
         right: 30px;
         cursor: pointer;
+        background: none;
+        border: none;
+        color: color.$primary-color;
         @media only screen and (max-width: 600px) {
             top: 300px;
             font-size: 2rem;
