lightbox style fix

--- a/ressources/styles/components/lightbox.scss
+++ b/ressources/styles/components/lightbox.scss
@@ -17,8 +17,9 @@
 
     &__container {
         display: flex;
-        height: 100%;       
-        justify-content: space-around;
+        height: 100%;
+        width: auto;       
+        justify-content: space-evenly;
         align-items: center;
     }
     &__button {
@@ -29,12 +30,13 @@
         color: color.$primary-color;
         @media only screen and (max-width: 600px) {
             margin: 10px;
-            font-size: 2rem;
+            font-size: 0.3rem;
         }
 
     }
     &__content {
         position: relative;
+        width: 100%;
         display: flex;
         align-content: center;
         justify-content: center;
@@ -60,7 +62,7 @@
     }
     &__image {
         height: 90vh;
-        width: 1050px;
+        max-width: 1050px;
         object-fit: scale-down;
         @media only screen and (max-width: 600px) {
             width: 290px;
@@ -76,8 +78,8 @@
         border: none;
         color: color.$primary-color;
         @media only screen and (max-width: 600px) {
-            top: 300px;
-            font-size: 2rem;
+            top: 200px;
+            font-size: 0.3rem;
         }
     }
 
