--- a/ressources/styles/main.css
+++ b/ressources/styles/main.css
@@ -443,7 +443,8 @@ body {
 .lightbox__container {
   display: flex;
   height: 100%;
-  justify-content: space-around;
+  width: auto;
+  justify-content: space-evenly;
   align-items: center;
 }
 .lightbox__button {
@@ -456,11 +457,12 @@ body {
 @media only screen and (max-width: 600px) {
   .lightbox__button {
     margin: 10px;
-    font-size: 2rem;
+    font-size: 0.3rem;
   }
 }
 .lightbox__content {
   position: relative;
+  width: 100%;
   display: flex;
   align-content: center;
   justify-content: center;
@@ -488,7 +490,7 @@ body {
 }
 .lightbox__image {
   height: 90vh;
-  width: 1050px;
+  max-width: 1050px;
   object-fit: scale-down;
 }
 @media only screen and (max-width: 600px) {
@@ -508,8 +510,8 @@ body {
 }
 @media only screen and (max-width: 600px) {
   .lightbox__close {
-    top: 300px;
-    font-size: 2rem;
+    top: 200px;
+    font-size: 0.3rem;
   }
 }
 
