--- a/ressources/styles/components/modal.scss
+++ b/ressources/styles/components/modal.scss
@@ -49,17 +49,20 @@
 
         &__input {
             border-radius: 5px;
-            height: 70px;
+            height: 50px;
             @media only screen and (max-width: 600px) {
                 width: 340px;
             }
         }
 
         &__label {
-            font-size: 2.25rem;
+            font-size: 2rem;
             color: #312E2E;
             @media only screen and (max-width: 600px) {
                 font-size: 1.5rem;
+            }
+            &--hidden {
+                visibility: hidden;
             }
         }
 
