--- a/ressources/styles/components/modal.scss
+++ b/ressources/styles/components/modal.scss
@@ -49,7 +49,7 @@
 
         &__input {
             border-radius: 5px;
-            height: 50px;
+            height: 40px;
             @media only screen and (max-width: 600px) {
                 width: 340px;
             }
@@ -71,7 +71,6 @@
             background-color: color.$primary-color;
             border-radius: 5px;
             border: none;
-            margin-top: 50px;
             color: white;
             font-size: 1.5rem;
             padding: 15px;
@@ -82,4 +81,7 @@
             }
         }
     }
+}
+#message {
+    height: 120px;
 }
