submit label opacity

--- a/ressources/styles/components/modal.scss
+++ b/ressources/styles/components/modal.scss
@@ -62,7 +62,7 @@
                 font-size: 1.5rem;
             }
             &--hidden {
-                visibility: hidden;
+                opacity: 0;
             }
         }
 
